[package]
name = "jsonl"
description = "Tools for filtering and manipulating JSONL."
version = "0.2.0"
authors = ["Matthew Seyer <matthew.seyer@gmail.com>"]
edition = "2018"
homepage = "https://github.com/forensicmatt/JsonlTools"
repository = "https://github.com/forensicmatt/JsonlTools"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
log = "0.4"
fern = "0.5"
chrono = "0.4"
lazy_static = "1"
serde_json = "1.0"

[dependencies.jmespath]
git = "https://github.com/forensicmatt/jmespath.rs"
branch = "serde-error-fix"

[[bin]]
name = "jsonl_tool"
